--- a/NEWS
+++ b/NEWS
@@ -19,7 +19,8 @@ Version 7.7 (not yet released)
 ------------------------------
 
 Added the  Hungarian translation, with  thanks to  Balázs Úr.   Minor code
-changes were made to accommodate this language.
+changes were made  to accommodate this language.  Also added documentation
+in the file INSTALL to translate Star Traders into another language.
 
 
 Version 7.6 (13th August, 2014)
