--- a/NEWS
+++ b/NEWS
@@ -15,8 +15,8 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
-Version 7.7 (not yet released)
-------------------------------
+Version 7.7 (18th November, 2014)
+---------------------------------
 
 Added the  Hungarian translation, with  thanks to  Balázs Úr.   Minor code
 changes were made  to accommodate this language.  Also added documentation
