--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
+Version 7.8 (not yet released)
+------------------------------
+
+Updated to GNU Gettext 0.19.1.
+
+
 Version 7.7 (18th August, 2015)
 -------------------------------
 
