Mention updates to French, German and Norwegian Bokmål translations

--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,9 @@ at http://www.zap.org.au/services/svn/.
 Version 7.8 (not yet released)
 ------------------------------
 
-Updated all references to GNU Gettext to version 0.19.5.
+Updated  all references  to GNU  Gettext  to version 0.19.5.   Updated the
+translations for German, French and Norwegian Bokmål (in that order), with
+thanks to Philipp Thomas, Frédéric Marchal and Johnny A. Solbu.
 
 
 Version 7.7 (18th August, 2015)
