--- a/po/nb.po
+++ b/po/nb.po
@@ -190,8 +190,8 @@ msgid "Fornax Express"
 msgstr "Fornax Express"
 
 #: src/globals.c:53
-msgid "Gemeni Inc"
-msgstr "Gemeni A/S"
+msgid "Gemini Inc"
+msgstr "Gemini A/S"
 
 #: src/globals.c:54
 msgid "Hercules and Co"
