--- a/NEWS
+++ b/NEWS
@@ -23,9 +23,9 @@ a spelling mistake  that has been present  since 1990!   Special thanks to
 Anders Jonsson for pointing this out.  Also updated all references  to GNU
 Gettext to version 0.19.5.
 
-Updated the translations for German,  French and Norwegian Bokmål (in that
-order),  with  thanks  to  Philipp Thomas,  Frédéric  Marchal  and  Johnny
-A. Solbu.
+Added the Swedish translation, with thanks to Anders Jonsson.  Updated the
+translations for German, French and Norwegian Bokmål (in that order), with
+thanks to Philipp Thomas, Frédéric Marchal and Johnny A. Solbu.
 
 
 Version 7.7 (18th August, 2015)
